Fixed return car, fixed get rented cars
