# backend/src/controllers/renterController.js
@@ -174,36 +174,52 @@ module.exports = {
     },
 
     getRentedCars : function(accounts_address, callback){
+
+        Account.findAll().then(result=>{
+                var car_response = new Array();
+                result.forEachDone(function(item){
+                    if(item.car_owner_address){
+                        var car_owner = renter_contract.at(item.car_owner_address);
+                        var rented_car = car_owner.alreadyRentedCarByUser(accounts_address, {from: item.car_owner_address, gas: 4700000},
+                            (err, carResult) => {if(carResult){
+                                var rented_car_result = new Array();
+                                console.log("POSITION: ", web3.toDecimal(carResult));
+                                if (web3.toDecimal(carResult) != 0) {
+                                    var car_address = car_contract.at(carResult);
+
+                                    car_address.GetCarDetails({from: item.car_owner_address, gas: 4700000},
+                                        (err, result) => {if(result){
+                                            var geofence = geofencePrefAndSufToGeofence(result[3], result[4]);
+                                            console.log("POSITION: ", result[2], " ", removeZeros(result[2]));
+                                            rented_car_result.push({
+                                                carContractAddress: carResult,
+                                                carDetails:
+                                                    {penaltyValue: result[0],
+                                                    carGSMNum: result[1],
+                                                    position: web3.toDecimal(removeZeros(result[2])),
+                                                    geofence: geofence
+                                                }});
+                                            car_response.push({ownerContract:item.car_owner_address,availableCarContract:rented_car_result});
+                                        }});
+                                }
+
+                            }});
+                    }
+                }, function(){
+                    setTimeout(function() {
+                        console.log('done');
+                        base.successCallback(car_response,callback);
+                    }, 1000);
+                });
+            },
+            error=>{
+                base.errorCallback(error,callback);
+            });
+
+
                 const body = {
                              'account_address': accounts_address
                              };
-
-        Account.findOne({ where: body }).then(data => {
-            if(data.car_owner_address){
-                    var car_owner = renter_contract.at(data.car_owner_address);
-                                var available_car = car_owner.ListAvailableCars.call();
-                                var available_car_result = new Array();
-                                available_car.forEachDone(function(car_){
-                                     car_owner.GetCarDetails(car_, {from: accounts_address, gas: 4700000},
-                                                            (err, result) => {if(result){
-                                                                                    available_car_result.push({carContractAddress:car_,
-                                                                                        carDetails:{penaltyValue:result[0],
-                                                                                                    carGSMNum:Web3Utils.hexToUtf8(result[1]),
-                                                                                                    position:Web3Utils.hexToUtf8(result[2]),
-                                                                                                    geofence:result[3]
-                                                                                                    }});
-                                                                            }});
-                                },function(){
-                                    setTimeout(function() {
-                                         var response = {ownerContract:data.car_owner_address,availableCarContract:available_car_result};
-                                         base.successCallback(response,callback);
-                                    }, 1000);
-                                });
-            }else{
-                var res = { Message : "Create a car owner contract first"};
-                         base.errorCallback(res,callback);
-            }
-        });          
     },
 
     rentCar : function (account_address, ownercontractaddress ,car_contract_address, callback){
@@ -223,11 +239,11 @@ module.exports = {
                 
     },
 
-    returnCar : function (owner_address, ownercontractaddress ,car_contract_address, callback){
+    returnCar : function (renter_address, ownercontractaddress ,car_contract_address, callback){
         //Implementation Pending as per ABI
         var owner = renter_contract.at(ownercontractaddress);
               var rent_car = owner.returnCar(car_contract_address,
-                                { from: account_address, 
+                                { from: renter_address,
                                 gas: 4700000},(err, result) => {
                                                             if(err){
                                                                 base.errorCallback(err,callback);
